# phast_test

./: .gitignore  .gitlab-ci.yml  ArcRaster.cpp  CMakeLists.txt  CTestConfig.cmake  Cube.cpp  Cube.h  Data_source.cpp  Data_source.h  Domain.h  Drain.cpp  Drain.h  Filedata.cpp  Filedata.h  Makefile  Makefile.am  NOTICE  PHAST_Transform.cpp  PHAST_Transform.h  PHAST_polygon.cpp  PHAST_polygon.h  Point.cpp  Point.h  Polygon_tree.cpp  Polygon_tree.h  Polyhedron.h  Prism.cpp  Prism.h  README  RELEASE  River.h  Wedge.cpp  XYZTfile.cpp  XYZfile.cpp  Zone_budget.cpp  accumulate.c  accumulate.cpp  build-mpi-2012-64.cmake  build-mt-2012-64.cmake  build2012.bat  (+41 more)
doc/: .gitlab-ci.yml  Makefile.am
examples/: .gitlab-ci.yml  CMakeLists.txt  Makefile  Makefile.am  hosts  hosts_openmpi  run  runmpich  schema  zero.sed  zero1.sed
examples/Bench_FA/: Bench_FA.chem.dat.original  Bench_FA.trans.dat.original
examples/CapeCod/: Phast.tmp  capecod.mv
examples/MoMaS/: MoMaS.probdef.txt  Phast.tmp
examples/ZoneSteady/: ZoneSteady.log.txt  ZoneSteady.probdef.txt
examples/decay/: Phast.tmp  decay.O.bal  decay.O.chem  decay.O.head  decay.O.probdef  decay.bal.txt  decay.chem.txt  decay.chem.xyz.tsv  decay.comps.txt  decay.h5  decay.head.txt  decay.probdef.txt  decay_1.chem.xyz.tsv
examples/diffusion1d/: Phast.tmp  clean  diffusion1d.O.chem  diffusion1d.O.vel  diffusion1d.chem.txt  diffusion1d.chem.xyz.tsv  diffusion1d.head.xyz.tsv  diffusion1d.log.txt  diffusion1d.probdef.txt  diffusion1d.vel.txt  diffusion1d.vel.xyz.tsv  diffusion1d.xyz.vel  notes
examples/diffusion2d/: Phast.tmp  diffusion2d.O.probdef  diffusion2d.O.vel  diffusion2d.chem.txt  diffusion2d.chem.xyz.tsv  diffusion2d.log.txt  diffusion2d.probdef.txt  diffusion2d.vel.txt  diffusion2d.vel.xyz.tsv  diffusion2d_1.chem.xyz.tsv
examples/disp2d/: Phast.tmp  disp2d.O.bal  disp2d.O.chem  disp2d.O.comps  disp2d.O.head  disp2d.O.probdef  disp2d.O.vel  disp2d.bal.txt  disp2d.chem.txt  disp2d.chem.xyz.tsv  disp2d.comps.txt  disp2d.h5  disp2d.head.txt  disp2d.probdef.txt  disp2d.vel.txt  disp2d_1.chem.xyz.tsv
examples/dryriver/: dryriver.mv  xyzt_test
examples/ex1/: Phast.tmp  ex1.O.bal  ex1.O.chem  ex1.O.head  ex1.O.probdef  ex1.bal.txt  ex1.chem.txt  ex1.chem.xyz.tsv  ex1.dummy.sel  ex1.head.txt  ex1.probdef.txt  ex1.vel.txt
examples/ex2/: Phast.tmp  ex2.O.bal  ex2.O.chem  ex2.O.head  ex2.O.probdef  ex2.O.vel  ex2.bal.txt  ex2.chem.txt  ex2.chem.xyz.tsv  ex2.h5  ex2.head.txt  ex2.head.xyz.tsv  ex2.probdef.txt  ex2.vel.txt  ex2.vel.xyz.tsv  ex2.xyz.chem  ex2.xyz.head  ex2_1.chem.xyz.tsv
examples/ex3/: Phast.tmp  ex3.O.bal  ex3.O.chem  ex3.O.head  ex3.O.probdef  ex3.bal.txt  ex3.chem.txt  ex3.chem.xyz.tsv  ex3.comps.txt  ex3.dummy.sel  ex3.h5  ex3.head.txt  ex3.probdef.txt  ex3_1.chem.xyz.tsv
examples/ex4/: Phast.tmp  ex4.O.bal  ex4.O.chem  ex4.O.head  ex4.O.probdef  ex4.O.vel  ex4.O.wel  ex4.bal.txt  ex4.chem.txt  ex4.chem.xyz.tsv  ex4.h5  ex4.head.txt  ex4.head.xyz.tsv  ex4.probdef.txt  ex4.restart  ex4.vel.txt  ex4.vel.xyz.tsv  ex4.wel.txt  ex4.wel.xyz.tsv  ex4.wt.txt  ex4.wt.xyz.tsv  ex4.xyz.chem  ex4.xyz.vel  ex4.xyz.wel  ex4_1.chem.xyz.tsv
examples/ex4_ddl/: Phast.tmp  ex4_ddl.O.bal  ex4_ddl.O.chem  ex4_ddl.O.head  ex4_ddl.O.vel  ex4_ddl.O.wel  ex4_ddl.bal.txt  ex4_ddl.chem.txt  ex4_ddl.chem.xyz.tsv  ex4_ddl.head.txt  ex4_ddl.head.xyz.tsv  ex4_ddl.log.txt  ex4_ddl.probdef.txt  ex4_ddl.vel.txt  ex4_ddl.wel.txt  ex4_ddl.wel.xyz.tsv  ex4_ddl.xyz.chem  ex4_ddl.xyz.vel  ex4_ddl.xyz.wel
examples/ex4_noedl/: Phast.tmp  ex4_noedl.O.bal  ex4_noedl.O.chem  ex4_noedl.O.head  ex4_noedl.O.probdef  ex4_noedl.O.vel  ex4_noedl.O.wel  ex4_noedl.bal.txt  ex4_noedl.chem.txt  ex4_noedl.chem.xyz.tsv  ex4_noedl.head.txt  ex4_noedl.head.xyz.tsv  ex4_noedl.log.txt  ex4_noedl.probdef.txt  ex4_noedl.vel.txt  ex4_noedl.vel.xyz.tsv  ex4_noedl.wel.txt  ex4_noedl.wel.xyz.tsv  ex4_noedl.xyz.chem  ex4_noedl.xyz.vel  ex4_noedl.xyz.wel
examples/ex4_start_time/: Phast.tmp  ex4_start_time.O.bal  ex4_start_time.O.head  ex4_start_time.O.probdef  ex4_start_time.O.wel  ex4_start_time.bal.txt  ex4_start_time.chem.txt  ex4_start_time.chem.xyz.tsv  ex4_start_time.head.txt  ex4_start_time.log.txt  ex4_start_time.probdef.txt  ex4_start_time.restart  ex4_start_time.vel.txt  ex4_start_time.vel.xyz.tsv  ex4_start_time.wel.txt  ex4_start_time.wel.xyz.tsv  ex4_start_time.xyz.chem  ex4_start_time.xyz.vel  ex4_start_time.xyz.wel
examples/ex4_transient/: Phast.tmp  ex4_transient.O.bal  ex4_transient.O.head  ex4_transient.O.probdef  ex4_transient.bal.txt  ex4_transient.chem.xyz.tsv  ex4_transient.head.txt  ex4_transient.head.xyz.tsv  ex4_transient.log.txt  ex4_transient.probdef.txt  ex4_transient.wel.txt  ex4_transient.wel.xyz.tsv  ex4_transient.xyz.chem  ex4_transient.xyz.head  ex4_transient.xyz.wel  ex4_transient_1.chem.xyz.tsv
examples/ex4restart/: Phast.tmp  ex4.restart  ex4restart.O.bal  ex4restart.O.head  ex4restart.O.probdef  ex4restart.O.vel  ex4restart.O.wel  ex4restart.bal.txt  ex4restart.chem.txt  ex4restart.chem.xyz.tsv  ex4restart.h5  ex4restart.head.txt  ex4restart.head.xyz.tsv  ex4restart.log.txt  ex4restart.probdef.txt  ex4restart.restart  ex4restart.vel.txt  ex4restart.wel.txt  ex4restart.wel.xyz.tsv  ex4restart.xyz.chem  ex4restart.xyz.vel  ex4restart.xyz.wel
examples/ex4v1/: clean  ex4.chem.txt  ex4.vel.txt  ex4v1.wel.txt  ex4v1.wel.xyz.tsv  ex4v1.wt.xyz.tsv
examples/ex5/: ex5.bal.txt  ex5.mv  ex5.zf.txt
examples/ex6/: ex6.chem.txt  ex6.zf.tsv
examples/flux_patches/: Phast.tmp  flux_patches.O.probdef  flux_patches.bal.txt  flux_patches.chem.txt  flux_patches.head.txt  flux_patches.log.txt  flux_patches.probdef.txt
examples/free/: Phast.tmp  free.O.bal  free.O.bcf  free.O.chem  free.O.head  free.O.probdef  free.O.vel  free.bal.txt  free.bcf.txt  free.chem.txt  free.chem.xyz.tsv  free.dummy.sel  free.h5  free.head.txt  free.head.xyz.tsv  free.probdef.txt  free.vel.xyz.tsv  free.xyz.chem  free.xyz.head  free.xyz.vel  free_1.chem.xyz.tsv
examples/gas/: Phast.tmp
test/: CMakeLists.txt  Makefile.am  phastinputcpp.rc  phrqex11
(+2584 files in other folders)
