EXAMPLES_DIR = $(datadir)/doc/$(PACKAGE_TARNAME)-$(VERSION)/examples

# decay
#
example_decaydir = $(EXAMPLES_DIR)/decay

dist_example_decay_DATA = $(decay)

decay= \
    decay/decay.chem.dat \
    decay/decay.trans.dat \
    decay/phast.dat

# diffusion1d
#
example_diffusion1ddir = $(EXAMPLES_DIR)/diffusion1d

dist_example_diffusion1d_DATA = $(diffusion1d)

diffusion1d= \
     diffusion1d/diffusion1d.chem.dat \
     diffusion1d/diffusion1d.head.dat \
     diffusion1d/diffusion1d.trans.dat \
     diffusion1d/phast.dat


# diffusion2d
#
example_diffusion2ddir = $(EXAMPLES_DIR)/diffusion2d

dist_example_diffusion2d_DATA = $(diffusion2d)

diffusion2d= \
     diffusion2d/diffusion2d.chem.dat \
     diffusion2d/diffusion2d.head.dat \
     diffusion2d/diffusion2d.trans.dat \
     diffusion2d/phast.dat


# disp2d
#
example_disp2ddir = $(EXAMPLES_DIR)/disp2d

dist_example_disp2d_DATA = $(disp2d)

disp2d= \
     disp2d/disp2d.chem.dat \
     disp2d/disp2d.trans.dat \
     disp2d/phast.dat


# ex1
#
example_ex1dir = $(EXAMPLES_DIR)/ex1

dist_example_ex1_DATA = $(ex1)

ex1= \
     ex1/ex1.chem.dat \
     ex1/ex1.trans.dat \
     ex1/phast.dat
     
     
# ex2
#
example_ex2dir = $(EXAMPLES_DIR)/ex2

dist_example_ex2_DATA = $(ex2)

ex2= \
     ex2/ex2.chem.dat \
     ex2/ex2.trans.dat \
     ex2/phast.dat
     
     
# ex3
#
example_ex3dir = $(EXAMPLES_DIR)/ex3

dist_example_ex3_DATA = $(ex3)

ex3= \
     ex3/ex3.chem.dat \
     ex3/ex3.trans.dat \
     ex3/phast.dat
     
     
# ex4
#
example_ex4dir = $(EXAMPLES_DIR)/ex4

dist_example_ex4_DATA = $(ex4)

ex4= \
     ex4/ex4.chem.dat \
     ex4/ex4.restart.gz \
     ex4/ex4.trans.dat \
     ex4/phast.dat
     
     
# ex4_ddl
#
example_ex4_ddldir = $(EXAMPLES_DIR)/ex4_ddl

dist_example_ex4_ddl_DATA = $(ex4_ddl)

ex4_ddl= \
     ex4_ddl/ex4_ddl.chem.dat \
     ex4_ddl/ex4_ddl.trans.dat \
     ex4_ddl/phast.dat
     
     
# ex4_noedl
#
example_ex4_noedldir = $(EXAMPLES_DIR)/ex4_noedl

dist_example_ex4_noedl_DATA = $(ex4_noedl)

ex4_noedl= \
     ex4_noedl/ex4_noedl.chem.dat \
     ex4_noedl/ex4_noedl.trans.dat \
     ex4_noedl/phast.dat
     
     
# ex4_start_time
#
example_ex4_start_timedir = $(EXAMPLES_DIR)/ex4_start_time

dist_example_ex4_start_time_DATA = $(ex4_start_time)

ex4_start_time= \
     ex4_start_time/ex4_start_time.chem.dat \
     ex4_start_time/ex4_start_time.trans.dat \
     ex4_start_time/phast.dat
     
     
# ex4_transient
#
example_ex4_transientdir = $(EXAMPLES_DIR)/ex4_transient

dist_example_ex4_transient_DATA = $(ex4_transient)

ex4_transient= \
     ex4_transient/ex4.head.dat \
     ex4_transient/ex4_transient.chem.dat \
     ex4_transient/ex4_transient.trans.dat \
     ex4_transient/initial.head.dat \
     ex4_transient/phast.dat
     
     
# ex4restart
#
example_ex4restartdir = $(EXAMPLES_DIR)/ex4restart

dist_example_ex4restart_DATA = $(ex4restart)

ex4restart= \
     ex4restart/ex4.head.dat \
     ex4restart/ex4.restart.gz \
     ex4restart/ex4restart.chem.dat \
     ex4restart/ex4restart.trans.dat \
     ex4restart/phast.dat


# ex5
#
example_ex5dir = $(EXAMPLES_DIR)/ex5
example_ex5_ArcDatadir = $(EXAMPLES_DIR)/ex5/ArcData
example_ex5_Parametersdir = $(EXAMPLES_DIR)/ex5/Parameters

dist_example_ex5_DATA = $(ex5)
dist_example_ex5_ArcData_DATA = $(ArcData)
dist_example_ex5_Parameters_DATA = $(Parameters)

ex5= \
     ex5/ex5.head.200.dat \
     ex5/ex5.trans.dat

ArcData= \
     ex5/ArcData/Ashumet.dbf \
     ex5/ArcData/Ashumet.shp \
     ex5/ArcData/Ashumet.shx \
     ex5/ArcData/AshumetBath.dbf \
     ex5/ArcData/AshumetBath.shp \
     ex5/ArcData/AshumetBath.shx \
     ex5/ArcData/bedrock.txt \
     ex5/ArcData/Coona.dbf \
     ex5/ArcData/Coona.shp \
     ex5/ArcData/Coona.shx \
     ex5/ArcData/CoonaBath.dbf \
     ex5/ArcData/CoonaBath.shp \
     ex5/ArcData/CoonaBath.shx \
     ex5/ArcData/ModelExtent.dbf \
     ex5/ArcData/ModelExtent.shp \
     ex5/ArcData/ModelExtent.shx \
     ex5/ArcData/OffShore.dbf \
     ex5/ArcData/OffShore.shp \
     ex5/ArcData/OffShore.shx \
     ex5/ArcData/OnShore.dbf \
     ex5/ArcData/OnShore.shp \
     ex5/ArcData/OnShore.shx \
     ex5/ArcData/SimpleBath.dbf \
     ex5/ArcData/SimpleBath.shp \
     ex5/ArcData/SimpleBath.shx \
     ex5/ArcData/SimplePonds.dbf \
     ex5/ArcData/SimplePonds.shp \
     ex5/ArcData/SimplePonds.shx
     
Parameters= \
     ex5/Parameters/kh_meters \
     ex5/Parameters/kz_meters


# ex6
#
example_ex6dir = $(EXAMPLES_DIR)/ex6

dist_example_ex6_DATA = $(ex6)

ex6= \
     ex6/ex6.chem.dat \
     ex6/ex6.trans.dat \
     ex6/phast.dat
     
     
# kindred4.4
#
example_kindred4.4dir = $(EXAMPLES_DIR)/kindred4.4

dist_example_kindred4.4_DATA = $(kindred4.4)

kindred4.4= \
     kindred4.4/kindred4.4.chem.dat \
     kindred4.4/kindred4.4.trans.dat \
     kindred4.4/phast.dat
     
     
# leaky
#
example_leakydir = $(EXAMPLES_DIR)/leaky

dist_example_leaky_DATA = $(leaky)

leaky= \
     leaky/leaky.trans.dat
     
     
# leakysurface
#
example_leakysurfacedir = $(EXAMPLES_DIR)/leakysurface

dist_example_leakysurface_DATA = $(leakysurface)

leakysurface= \
     leakysurface/leakysurface.trans.dat
     
     
# leakyx
#
example_leakyxdir = $(EXAMPLES_DIR)/leakyx

dist_example_leakyx_DATA = $(leakyx)

leakyx= \
     leakyx/leakyx.trans.dat \
     leakyz/leakyz.trans.dat


# linear_bc
#
example_linear_bcdir = $(EXAMPLES_DIR)/linear_bc

dist_example_linear_bc_DATA = $(linear_bc)

linear_bc= \
     linear_bc/linear_bc.chem.dat \
     linear_bc/linear_bc.trans.dat \
     linear_bc/phast.dat


# linear_ic
#
example_linear_icdir = $(EXAMPLES_DIR)/linear_ic

dist_example_linear_ic_DATA = $(linear_ic)

linear_ic= \
     linear_ic/linear_ic.chem.dat \
     linear_ic/linear_ic.trans.dat \
     linear_ic/phast.dat


# mass_balance
#
example_mass_balancedir = $(EXAMPLES_DIR)/mass_balance

dist_example_mass_balance_DATA = $(mass_balance)

mass_balance= \
     mass_balance/mass_balance.chem.dat \
     mass_balance/mass_balance.trans.dat \
     mass_balance/phast.dat


# notch
#
example_notchdir = $(EXAMPLES_DIR)/notch

dist_example_notch_DATA = $(notch)

notch= \
     notch/notch.trans.dat
     
     
# phrqex11
#
example_phrqex11dir = $(EXAMPLES_DIR)/phrqex11

dist_example_phrqex11_DATA = $(phrqex11)

phrqex11= \
     phrqex11/phast.dat \
     phrqex11/phrqex11.chem.dat \
     phrqex11/phrqex11.trans.dat
     
     
# property
#
example_propertydir = $(EXAMPLES_DIR)/property

dist_example_property_DATA = $(property)

property= \
     property/phast.dat \
     property/property.chem.dat \
     property/property.mix \
     property/property.mix.xyzt \
     property/property.solns \
     property/property.trans.dat \
     property/property.xyzt
     
     
# radial
#
example_radialdir = $(EXAMPLES_DIR)/radial

dist_example_radial_DATA = $(radial)

radial= \
     radial/phast.dat \
     radial/radial.chem.dat \
     radial/radial.head.dat \
     radial/radial.trans.dat
     
     
# river
#
example_riverdir = $(EXAMPLES_DIR)/river

dist_example_river_DATA = $(river)

river= \
     river/river.trans.dat
     
     
# shell
#
example_shelldir = $(EXAMPLES_DIR)/shell

dist_example_shell_DATA = $(shell)

shell= \
     shell/phast.dat \
     shell/shell.chem.dat \
     shell/shell.trans.dat
     
     
# simple
#
example_simpledir = $(EXAMPLES_DIR)/simple

dist_example_simple_DATA = $(simple)

simple= \
     simple/phast.dat \
     simple/simple.chem.dat \
     simple/simple.trans.dat
     
     
# unconf
#
example_unconfdir = $(EXAMPLES_DIR)/unconf

dist_example_unconf_DATA = $(unconf)

unconf= \
     unconf/unconf.trans.dat
     
     
# well
#
example_welldir = $(EXAMPLES_DIR)/well

dist_example_well_DATA = $(well)

well= \
     well/phast.dat \
     well/well.trans.dat
     
     
# zf
#
example_zfdir = $(EXAMPLES_DIR)/zf

dist_example_zf_DATA = $(zf)

zf= \
     zf/phast.dat \
     zf/zf.chem.dat \
     zf/zf.subgrid.heads \
     zf/zf.trans.dat
